--- a/src/styles/App.module.scss
+++ b/src/styles/App.module.scss
@@ -1,10 +1,17 @@
+@use 'styles/breakpoints' as *;
+
 .Container {
   height: 100vh;
   width: 90%;
-  max-width: 600px;
+  max-width: 350px;
   margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
+  @include medium {
+    width: 100%;
+    max-width: 600px;
+  }
 }
